# py-igs

./: .gitignore  README.md  pyproject.toml
cairo/: __init__.pyi
example/: scene.mtl  scene2.mtl
example/objects/: mk4.mtl  vp.mtl
py_igs/: __main__.py  application_window.py  helpers.py
py_igs/graphics/: vec3.py
py_igs/objects/: bezier_2d.py  bezier_3d.py  bspline_2d.py  bspline_3d.py  line_2d.py  line_3d.py  object_2d.py  object_3d.py  object_type.py  point_2d.py  point_3d.py  wireframe_2d.py  wireframe_3d.py
py_igs/parsers/: file_obj.py
py_igs/primitives/: clipping_method.py  display_file.py  graphical_object.py  matrix.py  vec2.py  vec3.py  viewport.py  window.py
py_igs/primitives/__pycache__/: matrix.__matrix_multiply__-14.py38.1.nbc  matrix.__matrix_multiply__-14.py38.2.nbc  matrix.__matrix_multiply__-14.py38.nbi  matrix.__matrix_scale__-18.py38.1.nbc  matrix.__matrix_scale__-18.py38.nbi  matrix.__matrix_sub__-26.py38.1.nbc  matrix.__matrix_sub__-26.py38.nbi  matrix.__matrix_sum__-22.py38.1.nbc  matrix.__matrix_sum__-22.py38.nbi
py_igs/scene/: object3.py  scene.py
py_igs/shaders/: example.wgsl  objects_transform.wgsl  test.py
py_igs/storage/: descriptor_obj.py
py_igs/wgpu/: test.py  test2.py
resources/interface/: #application.glade#  app2.glade  app2.glade~  application.glade  application.glade~
tests/: test_py_igs.py
