[tool.poetry]
name = "py-igs"
version = "0.2.0"
description = ""
authors = ["Enzo Albornoz <enzocoelhoalbornoz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pycairo = "^1.20.0"
PyGObject = "^3.40.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
