[tool.poetry]
name = "py-igs"
version = "0.5.0"
description = ""
authors = ["Enzo Albornoz <enzocoelhoalbornoz@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
pycairo = "^1.20.0"
PyGObject = "^3.40.1"
numba = "^0.53.1"
numpy = "^1.21.1"
scipy = "^1.7.1"


[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
